--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "react-bootstrap": "^0.32.1",
+    "react-mic": "^9.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1"
   }
