readme updated with ss

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
-        "start": "concurrently \"cd server && npm install && npm start\" \"cd client && npm install && npm start\""
+        "start": "concurrently \"cd server && npm start\" \"cd client && npm start\"",
+        "install": "npm install --prefix ./server && npm install --prefix ./client"
     }
 }
